--- a/css/about.css
+++ b/css/about.css
@@ -4,5 +4,34 @@
     font-size: 40px;
     text-align: center;
     margin-top: 200px;
-    min-height: 100vh;
+    min-height: 250px;
+}
+
+.moreInfo{
+    margin-bottom: 250px;
+    min-height: 150px;
+    font-size: 40px;
+}
+
+.content{
+    display: none;
+    text-decoration: bold;
+}
+
+.title{
+    display: inline-block;
+    margin-top: 10px;
+    border-radius: 10px;
+    background-color: #2ecc71;
+    color: #fff;
+    font-weight: 500;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 8px 8px;
+    text-decoration: none;
+    outline: none;
+    transition: .3s;
+}
+.title:hover{
+    background-color:#27ae60 ;
 }
