--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ header {
     display: flex;
     background-color: aquamarine    ;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     position: sticky;
     top: 0;
     transition: 1s ease;
@@ -18,6 +18,10 @@ nav{
     padding-right: 30px;
     position: relative;
     display: flex;
+    
+}
+nav a {
+    margin: 5px;
 }
 .new-delivery {
     min-height: 100vh;
@@ -26,7 +30,7 @@ nav{
     flex-direction: column;
     justify-content: center;
 }
-#gtr{
+#carSlider{
     padding-top: px;
     max-width: 700px;
     max-height: 300px;
@@ -80,7 +84,7 @@ footer{
     flex-direction: column;
     text-align: center;
 }
-footer-content h3{
+.footer-content h3{
     font-size: 1.8rem;
     font-weight: 400;
     text-transform: capitalize;
@@ -148,11 +152,11 @@ nav a:hover{
     background-color:#27ae60 ;
 }
 
-.green{
+.stickyNav{
     background: transparent;
 }
 
-.green #dName {
+.stickyNav #dName {
     color: white;
     transition: 1s ease;
 }
@@ -176,7 +180,7 @@ nav a:hover{
     display: none;
     position: absolute;
     top: 40px;
-    left: 0;
+    
 }
 
 
